crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__reasoning_normalizer__tests__reasoning_normalizer_drops_reasoning_when_last_assistant_has_none.snap
---
source: crates/forge_domain/src/transformer/reasoning_normalizer.rs
assertion_line: 168
expression: snapshot
---
transformation: ReasoningNormalizer_last_assistant_has_no_reasoning
before:
  messages:
    - text:
        role: User
        content: User question
    - text:
        role: Assistant
        content: First assistant response with reasoning
        reasoning_details:
          - text: I need to think about this carefully
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - text:
        role: User
        content: Follow-up question
    - text:
        role: Assistant
        content: Second assistant response with reasoning
        reasoning_details:
          - text: I need to think about this carefully
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - text:
        role: Assistant
        content: Third assistant without reasoning
  reasoning:
    enabled: true
after:
  messages:
    - text:
        role: User
        content: User question
    - text:
        role: Assistant
        content: First assistant response with reasoning
    - text:
        role: User
        content: Follow-up question
    - text:
        role: Assistant
        content: Second assistant response with reasoning
    - text:
        role: Assistant
        content: Third assistant without reasoning
  reasoning:
    enabled: true
