crates/forge_domain/src/transformer/snapshots/forge_domain__transformer__reasoning_normalizer__tests__reasoning_normalizer_preserves_only_last_assistant_reasoning.snap
---
source: crates/forge_domain/src/transformer/reasoning_normalizer.rs
assertion_line: 196
expression: snapshot
---
transformation: ReasoningNormalizer_preserves_only_last_assistant_reasoning
before:
  messages:
    - text:
        role: User
        content: User message
    - text:
        role: Assistant
        content: First assistant with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - text:
        role: Assistant
        content: Second assistant with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
    - text:
        role: Assistant
        content: Third assistant with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
  reasoning:
    enabled: true
after:
  messages:
    - text:
        role: User
        content: User message
    - text:
        role: Assistant
        content: First assistant with reasoning
    - text:
        role: Assistant
        content: Second assistant with reasoning
    - text:
        role: Assistant
        content: Third assistant with reasoning
        reasoning_details:
          - text: Complex reasoning process
            signature: ~
            data: ~
            id: ~
            format: ~
            index: ~
            type_of: ~
  reasoning:
    enabled: true
